CREATE TABLE IF NOT EXISTS "__EFMigrationsHistory" (
    "MigrationId" character varying(150) NOT NULL,
    "ProductVersion" character varying(32) NOT NULL,
    CONSTRAINT "PK___EFMigrationsHistory" PRIMARY KEY ("MigrationId")
);

START TRANSACTION;

CREATE TABLE "Departments" (
    "Department_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Department_Name" text NOT NULL,
    "Team_Member_Id" integer,
    CONSTRAINT "PK_Departments" PRIMARY KEY ("Department_Id")
);

CREATE TABLE "Invoices" (
    "Invoice_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Invoice_Date" timestamp with time zone NOT NULL,
    "Invoice_DueDate" timestamp with time zone NOT NULL,
    "Invoice_TotalAmount" numeric NOT NULL,
    "Invoice_TaxAmount" numeric NOT NULL,
    "Invoice_Discount" integer NOT NULL,
    "Invoice_AmountDue" numeric NOT NULL,
    "Orders_Id" integer,
    "User_Id" integer,
    "Status_Id" integer,
    "Payments_Id" integer,
    CONSTRAINT "PK_Invoices" PRIMARY KEY ("Invoice_Id")
);

CREATE TABLE "Milestones" (
    "Milestone_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Milestone_Name" text NOT NULL,
    "Milestone_Description" text NOT NULL,
    "Milestone_DueDate" timestamp with time zone,
    "Project_Id" integer,
    CONSTRAINT "PK_Milestones" PRIMARY KEY ("Milestone_Id")
);

CREATE TABLE "Orders" (
    "Order_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Order_Date" timestamp with time zone,
    "Order_Total_Amount" numeric,
    "User_Id" integer,
    "Status_Id" integer,
    CONSTRAINT "PK_Orders" PRIMARY KEY ("Order_Id")
);

CREATE TABLE "Payments" (
    "Payment_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Orders_Id" integer NOT NULL,
    "Payment_Date" timestamp with time zone,
    "Amount_Paid" numeric NOT NULL,
    "Payment_Method" integer NOT NULL,
    "Payment_Status_Id" integer NOT NULL,
    CONSTRAINT "PK_Payments" PRIMARY KEY ("Payment_Id")
);

CREATE TABLE "Phases" (
    "Phase_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "NamePhase" text NOT NULL,
    "DescPhase" text,
    "DueDate" timestamp with time zone NOT NULL,
    "Project_Id" integer,
    "Assigned_To" integer,
    "Status_Id" integer,
    CONSTRAINT "PK_Phases" PRIMARY KEY ("Phase_Id")
);

CREATE TABLE "Projects" (
    "Project_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "NameProject" text NOT NULL,
    "DescProject" text,
    "StartDate" timestamp with time zone,
    "EndDate" timestamp with time zone,
    "Attachments" text,
    "SourceCodeUrl" text,
    "User_Id" integer,
    "Project_Type_Id" integer,
    "Technology_Id" integer,
    "Status_Id" integer,
    CONSTRAINT "PK_Projects" PRIMARY KEY ("Project_Id")
);

CREATE TABLE "Reviews" (
    "Review_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Review_Title" text NOT NULL,
    "Review_Desc" text NOT NULL,
    "Review_Comment" text,
    "Review_Rate" integer,
    "Review_Image" text,
    "Review_IsFeatured" boolean,
    "Review_Date" timestamp with time zone,
    "Review_Status" integer,
    "Review_Privacy" integer,
    "Project_Id" integer,
    "User_Id" integer,
    "Orders_Id" integer,
    "Team_Member_Id" integer,
    CONSTRAINT "PK_Reviews" PRIMARY KEY ("Review_Id")
);

CREATE TABLE "Status" (
    "Status_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "StatusTypes" integer,
    CONSTRAINT "PK_Status" PRIMARY KEY ("Status_Id")
);

CREATE TABLE "Teams" (
    "Team_Member_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "NameMember" text NOT NULL,
    "PasswordMember" text NOT NULL,
    "EmailMember" text,
    "FirstNameMember" text,
    "LastNameMember" text,
    "AvatarMember" text,
    "CoverMember" text,
    "TeamInfo_Id" integer,
    "RoleMember" integer,
    CONSTRAINT "PK_Teams" PRIMARY KEY ("Team_Member_Id")
);

CREATE TABLE "Technologies" (
    "Technology_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "NameTechnology" integer,
    CONSTRAINT "PK_Technologies" PRIMARY KEY ("Technology_Id")
);

CREATE TABLE "Tickets" (
    "Ticket_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Ticket_Title" text NOT NULL,
    "Ticket_Description" text,
    "Ticket_Created_Date" timestamp with time zone,
    "Ticket_Resolved_Date" timestamp with time zone,
    "Ticket_Attachment" text,
    "Project_Id" integer,
    "Orders_Id" integer,
    "Status_Id" integer,
    "Assigned_To" integer,
    CONSTRAINT "PK_Tickets" PRIMARY KEY ("Ticket_Id")
);

CREATE TABLE "TimeLogs" (
    "TimeLog_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Team_Member_Id" integer NOT NULL,
    "Phase_Id" integer NOT NULL,
    "Hours_Logged" numeric,
    "Date_Logged" timestamp with time zone,
    CONSTRAINT "PK_TimeLogs" PRIMARY KEY ("TimeLog_Id")
);

CREATE TABLE "Users" (
    "User_Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Username" text NOT NULL,
    "Password" text NOT NULL,
    "Email" text,
    "FirstName" text,
    "LastName" text,
    "Avatar" text,
    "Cover" text,
    "Usersinfo_Id" integer,
    "Role" integer,
    CONSTRAINT "PK_Users" PRIMARY KEY ("User_Id")
);

CREATE TABLE "Teams_RefreshTokens" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Token" text NOT NULL,
    "Expires" timestamp with time zone NOT NULL,
    "Created" timestamp with time zone NOT NULL,
    "CreatedByIp" text NOT NULL,
    "Revoked" timestamp with time zone,
    "RevokedByIp" text NOT NULL,
    "ReplacedByToken" text NOT NULL,
    "ReasonRevoked" text NOT NULL,
    "Team_Member_Id" integer,
    CONSTRAINT "PK_Teams_RefreshTokens" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_Teams_RefreshTokens_Teams_Team_Member_Id" FOREIGN KEY ("Team_Member_Id") REFERENCES "Teams" ("Team_Member_Id")
);

CREATE TABLE "Users_RefreshTokens" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY,
    "Token" text NOT NULL,
    "Expires" timestamp with time zone NOT NULL,
    "Created" timestamp with time zone NOT NULL,
    "CreatedByIp" text NOT NULL,
    "Revoked" timestamp with time zone,
    "RevokedByIp" text NOT NULL,
    "ReplacedByToken" text NOT NULL,
    "ReasonRevoked" text NOT NULL,
    "User_Id" integer NOT NULL,
    CONSTRAINT "PK_Users_RefreshTokens" PRIMARY KEY ("Id"),
    CONSTRAINT "FK_Users_RefreshTokens_Users_User_Id" FOREIGN KEY ("User_Id") REFERENCES "Users" ("User_Id") ON DELETE CASCADE
);

CREATE INDEX "IX_Teams_RefreshTokens_Team_Member_Id" ON "Teams_RefreshTokens" ("Team_Member_Id");

CREATE INDEX "IX_Users_RefreshTokens_User_Id" ON "Users_RefreshTokens" ("User_Id");

INSERT INTO "__EFMigrationsHistory" ("MigrationId", "ProductVersion")
VALUES ('20241022154315_InitialCreatePostgresSQL', '8.0.8');

COMMIT;

